[package]
name = "exercises"
version = "0.1.0"
authors = ["Rob Williams <rwilliams@spotify.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "1.2.0"
ron = "0.6.4"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
